docs/vn/k8s-udemy/deploy/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bottleneck-resolve
  labels:
    name: bottleneck-resolve
    environment: production
