docs/vn/k8s-udemy/deploy/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bottleneck-resolve
  namespace: bottleneck-resolve
  labels:
    app: bottleneck-resolve
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/actuator/prometheus"
spec:
  type: ClusterIP
  selector:
    app: bottleneck-resolve
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
